# sample-code-for-a-secure-vault-using-aws-nitro-enclaves

./: .cfnlintrc  .dockerignore  .editorconfig  .env.template  .gitignore  404.html  ATTRIBUTION.md  CLAUDE.md  Cargo.toml  ENCLAVE_IMPROVEMENTS.md  PLAN-verify-endpoint.md  README.md  architecture.drawio  buildspec.yml  ci_template.yml  deploy.sh  deploy_template.yml  docker-bake.hcl  index.html  kms_template.yml  kms_template_configuration.json  mkdocs.yml  sitemap.xml  uninstall.sh  vault_template.yml  vault_template_configuration.json  vpc_template.yml
.cargo/: config.toml
.claude/agents/: rust-engineer.md  security-engineer.md
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  docker-bake.yml  rust.yml  secure_workflows.yml  security_audit.yml
.kiro/specs/enclave-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/kms-ffi-wrapper/: design.md  requirements.md  tasks.md
.kiro/specs/parent-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
api/: Makefile  buildspec.yml  pyproject.toml  requirements-dev.txt  template.yml  template_configuration.json
api/dependencies/: requirements.txt
api/src/app/: constants.py  encoders.py  encryptors.py  enums.py  exceptions.py  hpke.py  lambda_handler.py  middlewares.py  models.py  utils.py  vault.py
api/src/app/resources/: __init__.py  dynamodb.py  kms.py
api/src/app/routers/: __init__.py  vaults.py
architecture/: index.html
canary/: Makefile  buildspec.yml  pyproject.toml  requirements-dev.txt  template.yml  template_configuration.json
canary/dependencies/: requirements.txt
canary/src/app/: constants.py  lambda_handler.py
canary/src/app/resources/: __init__.py  dynamodb.py  kms.py
deployment/: index.html
docs/: NitroVault_ThreatComposer.json  architecture.drawio  architecture.md  deployment.md  faq.md  index.md  post-deployment.md  references.md  security.md  support.md  user-guide.md
enclave/: Cargo.toml  Dockerfile  Makefile  build.rs  buildspec.yml
enclave/proptest-regressions/: expressions.txt
enclave/src/: constants.rs  expressions.rs  functions.rs  hpke.rs  kms.rs  lib.rs  main.rs  models.rs  nsm.rs  protocol.rs  utils.rs
enclave/src/aws_ne/: ffi.rs  mod.rs
faq/: index.html
parent/: Cargo.toml  Dockerfile  Makefile  README.md  buildspec.yml
parent/proptest-regressions/: errors.txt
parent/src/: application.rs  attestation.rs  configuration.rs  constants.rs  enclaves.rs  errors.rs  imds.rs  lib.rs  main.rs  models.rs  nitro_root_cert.rs  protocol.rs  routes.rs
parent/tests/: http_integration.rs
post-deployment/: index.html
references/: index.html
scripts/: check_no_panic.sh  setup_dev.sh
search/: search_index.json
security/: index.html
support/: index.html
user-guide/: index.html
