[workspace]
members = [
    "enclave",
    "parent"
]
resolver = "2"

# Workspace-wide clippy lints for no-panic Rust hardening
# These help catch panic-prone patterns at compile time
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"

[profile.release]
strip = true      # Automatically strip symbols from the binary
lto = true        # Enable full link time optimization for better size reduction
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort"   # Terminate process upon panic
opt-level = "z"   # Optimize for size (more aggressive than "s")
