[package]
name = "enclave-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "enclave-vault"
path = "src/main.rs"

[dependencies]
anyhow = { version = "=1.0.97", default-features = false }
aws-lc-rs = { version = "=1.13.0", default-features = false }
byteorder = { version = "=1.5.0", default-features = false }
cel-interpreter = { version = "=0.9.0", default-features = false, features = ["json", "chrono"] }
chrono = { version = "=0.4.40", default-features = false, features = ["now"] }
data-encoding = { version = "=2.8.0", default-features = false, features = ["alloc"] }
serde = { version = "=1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.140", default-features = false }
rustls = { version = "=0.23.25", default-features = false, features = ["aws_lc_rs", "prefer-post-quantum"] }
vsock = { version = "=0.5.1", default-features = false }
zeroize = { version = "=1.8.1", default-features = false, features = ["zeroize_derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "=0.1.45", default-features = false, features = ["secure"] }
