[package]
name = "parent-vault"
version = "0.1.0"
authors = ["Justin Plock <jplock@amazon.com>"]
description = "Parent instance application for AWS Nitro Enclaves Vault"
edition = "2024"
publish = false
default-run = "parent-vault"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parent-vault"
path = "src/main.rs"

[dependencies]
anyhow = { version = "=1.0.100", default-features = false }
aws-config = { version = "=1.8.12", default-features = false, features = ["rt-tokio", "behavior-version-latest", "default-https-client"] }
aws-credential-types = { version = "=1.2.11", default-features = false }
aws-smithy-runtime-api = { version = "=1.10.0", default-features = false, features = ["client"] }
axum = { version = "=0.8.8", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
clap = { version = "=4.5.54", default-features = false, features = ["std", "derive", "env", "help"] }
fastrand = { version = "=2.3.0", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.149", default-features = false }
thiserror = { version = "=2.0.18", default-features = false }
tokio = { version = "=1.49.0", default-features = false, features = ["rt-multi-thread", "process", "tracing", "time", "signal"] }
tower-http = { version = "=0.6.8", default-features = false, features = ["limit", "timeout"] }
validator = { version = "=0.20.0", default-features = false, features = ["derive"] }
tracing = { version = "=0.1.44", default-features = false, features = ["log"] }
tracing-subscriber = { version = "=0.3.22", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
vsock = { version = "=0.5.2", default-features = false }
zeroize = { version = "=1.8.2", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = { version = "=0.4.5", default-features = false }
axum-test = { version = "=18.6.0", default-features = false }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

# Clippy lints for no-panic Rust hardening
# These help catch panic-prone patterns at compile time
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
